frame/support/test/tests/pallet_ui/error_where_clause.stderr
error: Invalid pallet::error, where clause is not allowed on pallet error item
  --> $DIR/error_where_clause.rs:19:20
   |
19 |     pub enum Error<T> where u32: From<u8> {}
   |                       ^^^^^
